fix: select box alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -73,7 +73,7 @@ body {
 }
 .default-select {
   .ant-select-selection {
-    margin-top: -8px;
+    // margin-top: -8px;
   }
 }
 
